# Workshop_streamlit_dash

./: app.py  pyproject.toml
example/: app.py
