[project]
name = "workshop-streamlit-dash"
version = "0.1.0"
description = ""
authors = [
    {name = "Renan Domingos",email = "rna.domingos@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.48.0,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "streamlit-folium (>=0.25.1,<0.26.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
